syntax = "proto3";

package protos;

option go_package = "./negotiation";

service Negotiation {
	rpc ConnectStream(stream Message) returns (stream Message) {}
}

message Message {
	string privateKey = 1;
	string clientMachineKey = 2;
}
